# screw-dynamics-sindy

./: .gitignore  ENVIRONMENT_SETUP.md  LICENSE  README.md  activate_env.sh  pyproject.toml  requirements.txt  setup.py  verify_setup.py
.github/: CODEOWNERS
.github/workflows/: ci.yml
archived/: dataloaders.py  model.py  train.py  utilities.py
baseline/: README.md  model.py  train.py
data/: README.md
data/data_1/: observation_data.csv  sensor_data.csv
data/single_motion/: m4_0_0_0_1_19.962.csv  m4_0_0_0_stalled_2.csv  m4_0_0_3_stalled_3.csv  m4_0_0_5_stalled.csv  m4_2_15_10_1_16.471.csv  m4_2_15_10_drop_screw.csv  m4_2_15_10_stalled_4.csv  m4_2_15_12_1_19.655.csv  m4_2_15_15_drop_screw_2.csv  m4_2_15_5_1_13.897.csv  m4_2_15_7_1_15.454.csv  m4_2_15_9_1_15.686.csv  m5_0_0_0_1_13.056.csv  m5_0_0_0_1_13.428.csv  m5_0_0_0_1_13.428.xlsx  m5_0_0_0_1_14.26.csv  m5_0_0_0_1_15.873.csv  m5_0_0_0_1_15.873.xlsx  m5_0_0_0_1_17.147.csv  m5_0_0_0_1_17.147_single_motion.xlsx  m5_0_0_0_initial.csv  m5_0_0_0_initial.xlsx  m5_0_0_0_misalignment.csv  m5_0_0_0_misalignment.xlsx  m5_0_0_0_misalignment_2.csv  m5_0_0_0_stalled.csv  m5_0_0_0_stalled.xlsx  m5_0_0_0_stalled_4.csv  m5_0_0_1_stalled_3.csv  m5_0_0_2_stalled_2.csv  m5_2_15_0_1_13.69.csv  m5_2_15_0_1_33.625.csv  m5_2_15_2_1_16.114.csv  m5_3_30_0_1_13.203.csv  m5_3_30_0_dettach.csv  m5_3_30_0_dettach.xlsx  m5_4_45_0_stalled.csv
notebook/: README.md  extract_best_signal.ipynb  final-sindy-results.ipynb  plot_final.ipynb  post_process.ipynb  refine_data.ipynb  simulation-time-results.ipynb  sindy-time-results.ipynb  smooth_raw_pixels.ipynb
scripts/: README.md  camera_recorder.cpp  detect_color_boundaries.py  exp.py  experiment.py  screwtip_feature_tracking.py  screwtip_pose_detection.py
src/: README.md  dataloader.py  decoders.py  encoders.py  layers.py  main.py  model.py  sindy_utils.py  train_screw_range.py  train_v2.py  trainer.py
